# parsec

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
app/: CMakeLists.txt  PrintUtils.cpp  PrintUtils.hpp  main.cpp
cmake/: package-config.cmake.in
docs/: CMakeLists.txt
examples/: CMakeLists.txt  CppLexer.txt  Lexer.txt  simple-bnf.txt
examples/calc/: CMakeLists.txt  ExprParser.txt  main.cpp
examples/calc/app/: main.cpp
examples/calc/src/: ExprParser.txt
include/parsec/: BndToken.hpp  BnfGrammar.hpp  BnfLexer.hpp  BnfParser.hpp  BnfToken.hpp  CharAtom.hpp  CodeGen.hpp  CompileError.hpp  Compiler.hpp  Config.hpp.in  CppLexGen.hpp  CppSrcGen.hpp  DfaBuilder.hpp  DfaStateMachine.hpp  Grammar.hpp  LexAutomaton.hpp  LexCompiler.hpp  LexCppGenerator.hpp  LexGen.hpp  LexGenerator.hpp  LexGrammar.hpp  LexPattern.hpp  Lexer.hpp  LexerBase.hpp  Parser.hpp  Pattern.hpp  RegExNodes.hpp  RegExParser.hpp  RegExPrinter.hpp  Rule.hpp  Symbol.hpp  TextScanner.hpp  Token.hpp  TokenBase.hpp  TokenKinds.hpp  Utils.hpp  bnf.hpp  cli.hpp  core.hpp  deps.hpp  (+16 more)
include/parsec/bnf/: Grammar.hpp  GrammarRule.hpp  GrammarSymbol.hpp  RegularExpr.hpp  RegularGrammar.hpp  RegularPattern.hpp  Symbol.hpp  SymbolGrammar.hpp
include/parsec/cli/: ConsoleApp.hpp  OptionBuilder.hpp  OptionStore.hpp  cli.hpp
src/: BnfLexer.cpp  BnfParser.cpp  BnfToken.cpp  CMakeLists.txt  CodeGen.cpp  CodeGen.cxx  CodeGen.ixx  CompileError.cpp  CompileError.ixx  Compiler.cpp  Compiler.cxx  Compiler.ixx  CppLexGen.cpp  CppSrcGen.cpp  DfaBuilder.cpp  DfaStateMachine.cpp  Grammar.cpp  LexAutomaton.cpp  LexCompiler.cpp  LexCppGenerator.cpp  LexGen.cpp  LexGenerator.cpp  LexPattern.cpp  Lexer.cpp  Parser.cpp  Pattern.cpp  ProjectConfig.hpp.in  RegExNodes.cpp  RegExParser.cpp  RegExPrinter.cpp  SourceLoc.cpp  TextScanner.cpp  Token.cpp  TokenKinds.cpp  Utils.cpp  config.hpp.in  config.ixx.in  err.cpp  errors.cpp  hash.cpp  (+3 more)
src/bnf/: Grammar.cpp  GrammarRule.cpp  RegularExpr.cpp  RegularExpr.cxx  RegularExpr.ixx  RegularPattern.cpp  Symbol.ixx  SymbolGrammar.ixx  bnf.ixx
src/cli/: ConsoleApp.OptionBuilder.cpp  ConsoleApp.cpp  OptionBuilder.cpp  OptionStore.cpp
src/core/: CodeGen.cpp  CompileError.cpp  Compiler.cpp  CppSrcGen.cpp  Grammar.cpp  Lexer.cpp  ParseError.cpp  Parser.cpp  Pattern.cpp  RegularExpr.cpp  SourceLoc.cpp  SymbolGrammar.cpp  TextScanner.cpp  Token.cpp  TokenKinds.cpp
src/dfa/: Automaton.cpp  StateGen.cpp  print.cpp
src/elr/: Automaton.cpp  ItemSet.cpp  TransNetwork.cpp  hash.cpp  print.cpp
src/fg/: AlternNode.cpp  Atom.cpp  AtomVisitor.cpp  ConcatNode.cpp  Grammar.cpp  LangGrammar.cpp  Lexer.cpp  NilRule.cpp  OptionalRule.cpp  Parser.cpp  PlusRule.cpp  RegularExpr.cpp  RegularGrammar.cpp  RegularPattern.cpp  Rule-nodes.hpp  Rule.cpp  RuleAltern.cpp  RuleConcat.cpp  RuleExpr.cpp  RuleExpr_nodes.hpp  RulePrinter.cpp  RuleRef.cpp  RuleTraverser.cpp  StarRule.cpp  Symbol.cpp  SymbolGrammar.cpp  SymbolTypes.cpp  SyntaxNode.cpp  SyntaxRule.cpp  Token.cpp  TokenKinds.cpp  TokenRule.cpp  fg.NodePrinter.cpp  fg.Parser.cpp  regex.cpp
src/fg/regex/: Parser.cpp
src/fg/rules/: Atom.cpp  CharLiteral.cpp  NilRule.cpp  OptRule.cpp  PlusRule.cpp  Rule.cpp  RuleAltern.cpp  RuleConcat.cpp  RuleNode.cpp  RulePos.cpp  RulePrinter.cpp  RuleRef.cpp  StarRule.cpp
src/fsm/: Automaton.cpp  AutomatonBuilder.cpp  AutomatonFactory.cpp  AutomatonFactory_makeDfa.cpp  AutomatonFactory_makeSlr.cpp  DfaAutomaton.cpp  DfaStateGen.cpp  DfaStateGen.cxx  DfaStateGen.ixx  ElrAutomaton.cpp  ElrStateGen.cpp  ElrStateGen.cxx  ElrStateGen.ixx  Factory.cpp  NameConflictError.ixx  RegularPattern.cpp  State.cpp  StateMachine.cpp  fsm.ixx  print.cpp
src/lr/: StateGen.cpp
src/pars/: Lexer.cpp  Lexer.cxx  Lexer.ixx  ParseError.cpp  ParseError.ixx  Parser.cpp  Parser.cxx  Parser.ixx  Token.cpp  Token.ixx  TokenKinds.cpp  TokenKinds.ixx  ast.cpp  pars.ixx
src/pars/ast/: AlternRuleNode.ixx  BinaryRuleNode.ixx  ConcatRuleNode.ixx  EmptyNode.ixx  EmptyRuleNode.ixx  InlineTokenNode.ixx  ListNode.ixx  NamedRuleNode.ixx  NamedTokenNode.ixx  Node.ixx  NodeVisitor.ixx  OptionalRuleNode.ixx  PlusRuleNode.ixx  StarRuleNode.ixx  SymbolRuleNode.ixx  UnaryRuleNode.ixx  ast.cxx  ast.ixx
src/regex/: AlternExpr.cpp  BinaryExpr.cpp  CharAtom.cpp  CharLiteral.cpp  ConcatExpr.cpp  ExprNode.cpp  ExprPrinter.cpp  ExprTraverser.cpp  NilExpr.cpp  OptionalExpr.cpp  ParseError.cpp  ParseError.ixx  Parser.cpp  Parser.cxx  Parser.ixx  Pattern.cpp  PlusExpr.cpp  Printer.cpp  RegEx.cpp  RegularExpr.cpp  StarExpr.cpp  UnaryExpr.cpp  ast.cpp  make.cpp  nodes.cpp  regex.NodePrinter.cpp  regex.Parser.cpp  regex.cpp  regex.ixx
src/regex/ast/: AlternExpr.cpp  AlternExprNode.ixx  AtomExprNode.ixx  BinaryExprNode.ixx  CharAtom.cpp  ConcatExpr.cpp  ConcatExprNode.ixx  ExprNode.cpp  ExprNode.ixx  NilExpr.cpp  NodeTraverser.cpp  NodeVisitor.ixx  OptionalExpr.cpp  OptionalExprNode.ixx  PlusClosureNode.ixx  PlusExpr.cpp  StarClosureNode.ixx  StarExpr.cpp  UnaryExprNode.ixx  ast.cxx  ast.ixx
src/regex/nodes/: AlternExpr.cpp  CharAtom.cpp  ConcatExpr.cpp  ExprNode.cpp  NilExpr.cpp  NodeTraverser.cpp  OptionalExpr.cpp  PlusExpr.cpp  StarExpr.cpp
src/scan/: SourceLoc.ixx  TextScanner.cpp  TextScanner.cxx  TextScanner.ixx  UnexpectedEofError.ixx  scan.ixx
src/src_gen/: CodeGen.cpp  CppCodeGen.cpp  CppLexerGen.cpp  CppParserGen.cpp  LexerSpec.cpp  ParserSpec.cpp  cpp_utils.cpp  cpp_utils.hpp  utils.cpp
src/text/: chars.cpp  chars.ixx  strings.ixx  text.cpp  text.cxx  text.ixx
src/util/: char_util.cpp  chars.cpp  cpp_util.cpp  string_util.cpp  strings.cpp
src/utils/: Chars.cpp  SourceLoc.cpp  Strings.cpp  TextScanner.cpp  char_utils.cpp  chars.cpp  cpp_utils.cpp  string_utils.cpp  strings.cpp
templates/: hpp.tmpl
tests/: CMakeLists.txt  CharUtilTest.cpp  StringUtilTest.cpp  char_util.cpp  chars_test.cpp  regex_parse.cpp  regex_parse_test.cpp  string_util.cpp  strings_test.cpp  text_test.cpp  text_test.cxx
tests/src/: CharUtilsTest.cpp  RegularExprParseTest.cpp  RegularExprTest.cpp  StringUtilsTest.cpp
(+301 files in other folders)
