find_package(Doxygen REQUIRED)


set(DOXYGEN_REPEAT_BRIEF NO)
set(DOXYGEN_WARN_IF_UNDOCUMENTED NO)

set(DOXYGEN_SHOW_USED_FILES NO)
set(DOXYGEN_VERBATIM_HEADERS NO)
set(DOXYGEN_SHOW_INCLUDE_FILES NO)
set(DOXYGEN_SHOW_FILES NO)

list(APPEND DOXYGEN_STRIP_FROM_INC_PATH "${CMAKE_SOURCE_DIR}/include")
set(DOXYGEN_SHOW_HEADERFILE YES)

set(DOXYGEN_INLINE_INFO NO)
set(DOXYGEN_INLINE_SIMPLE_STRUCTS YES)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
set(DOXYGEN_SHOW_NAMESPACES YES)
set(DOXYGEN_COLLABORATION_GRAPH NO)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")

# Ensure proper expansion of X-macros
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
list(APPEND DOXYGEN_EXPAND_AS_DEFINED
	PARSEC_TOKEN_KIND PARSEC_TOKEN_KIND_LIST PARSEC_PARS_TOKEN_KIND PARSEC_PARS_TOKEN_KIND_LIST
)


doxygen_add_docs(parsec-docs WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/include" "parsec" "../README.md" ALL)
