set(DOC_TOOL Doxygen)


find_package(${DOC_TOOL})

if(NOT ${DOC_TOOL}_FOUND)
    message(WARNING "${DOC_TOOL} not found: documentation disabled")
    return()
endif()


set(DOXYGEN_REPEAT_BRIEF NO)
set(DOXYGEN_WARN_IF_UNDOCUMENTED NO)

set(DOXYGEN_SHOW_USED_FILES NO)
set(DOXYGEN_VERBATIM_HEADERS NO)
set(DOXYGEN_SHOW_INCLUDE_FILES NO)
set(DOXYGEN_SHOW_FILES NO)

list(APPEND DOXYGEN_STRIP_FROM_INC_PATH "${CMAKE_SOURCE_DIR}/include")
set(DOXYGEN_SHOW_HEADERFILE YES)

set(DOXYGEN_INLINE_INFO NO)
set(DOXYGEN_INLINE_SIMPLE_STRUCTS YES)
set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
set(DOXYGEN_SHOW_NAMESPACES YES)
set(DOXYGEN_COLLABORATION_GRAPH NO)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")


get_target_property(PARSEC_LIB_HEADERS parsec-lib HEADER_SET)

doxygen_add_docs(parsec-docs ALL USE_STAMP_FILE
    "${PARSEC_LIB_HEADERS}"
    "../README.md"
)
